[tool.poetry]
name = "fugle-realtime"
version = "0.2.8"
description = "Fugle Realtime"
license = "MIT"
readme = "README.md"
homepage = "https://developer.fugle.tw/realtime"
repository = "https://github.com/fortuna-intelligence/fugle-realtime-py"
documentation = "https://developer.fugle.tw/realtime/document"
keywords = ["fortuna", "fugle", "intelligence", "realtime", "taiwan"]
authors = ["Fortuna Intelligence Co., Ltd. <development@fugle.tw>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4"
pandas = "^1.2.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^3.10.1"
pre-commit = "^1.21.0"
black = "18.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
